<resources>
    <string name="app_name">waka_waka</string>
    <string name="label_match">매치</string>
    <string name="btn_join_match">매치 참여하기 7/12</string>
    <string name="chk_lineup">라인업 확인하기</string>
    <string name="chk_person">몇대몇매치</string>
    <string name="match_day">( 날짜 시간 )매치</string>
    <string name="match_place">구장 위치</string>
    <string name="create_match">매치 만들기</string>
    <string name="select_field">경기장을 선택해 주세요</string>
    <string name="select_date">날짜를 선택해 주세요</string>
    <string name="select_member">경기 인원수를 선택해 주세요</string>
    <string name="comment_hint">코멘트를 작성해주세요</string>
    <string name="btn_create_match">매치 만들기</string>
    <string name="web_client_id">755533939759-msu2nh9hcla4euaccq95c7e64lkbgkei.apps.googleusercontent.com</string>
    <string name="str_comment">작성하고 싶은 코멘트</string>
    <string name="pickDate">날짜 선택</string>
    <string name="profile">내정보</string>
    <string name="home">홈</string>
    <string name="match">매치</string>
    <string name="oursourcing">용병</string>
</resources>