<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/navi_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ti_match"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/match"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ti_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ti_profile"
            android:text="@string/profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>