<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_black"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_match_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_tv_match"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="1">

            <TextView
                android:id="@+id/tv_match"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/lineseedkr_bd"
                android:text="@string/create_match"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_tv_match"
            app:layout_constraintWidth_percent="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:background="@color/white"
                app:cardCornerRadius="18dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_img"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="20dp"
                        app:cardCornerRadius="18dp"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ground_example" />


                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_select_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/lineseedkr_bd"
                        android:text="@string/select_field"
                        android:textSize="12sp"
                        app:layout_constraintTop_toBottomOf="@+id/cv_img" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/spn_select_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintCircleRadius="18dp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_select_field">

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@color/light_grey"
                            android:spinnerMode="dropdown" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_select_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/lineseedkr_bd"
                        android:text="@string/select_date"
                        android:textSize="12sp"
                        app:layout_constraintTop_toBottomOf="@+id/spn_select_field" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/spn_select_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintCircleRadius="18dp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_select_date">

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@color/light_grey"
                            android:spinnerMode="dropdown" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_select_member"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/lineseedkr_bd"
                        android:text="@string/select_member"
                        android:textSize="12sp"
                        app:layout_constraintTop_toBottomOf="@+id/spn_select_date" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/spn_select_member"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintCircleRadius="18dp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_select_member">

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@color/light_grey"
                            android:spinnerMode="dropdown" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_comment_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/lineseedkr_bd"
                        android:text="경기장을 선택해 주세요"
                        android:textSize="12sp"
                        app:layout_constraintTop_toBottomOf="@+id/spn_select_member" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/tv_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintCircleRadius="18dp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_comment_title">

                        <EditText
                            android:id="@+id/tv_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/middle_light_grey"
                            android:hint="@string/comment_hint"
                            android:textSize="12sp" />
                    </androidx.cardview.widget.CardView>


                    <!--<Button
                        android:id="@+id/btn_chk_lineup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/round_button"
                        android:text="라인업 확인하기"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/lineseedkr_bd"
                        app:layout_constraintTop_toBottomOf="@+id/spn_select_field"/>
                    -->


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/navi_bottom"
        layout="@layout/bottom_navigation_view"></include>

</androidx.constraintlayout.widget.ConstraintLayout>